@@ -29,53 +29,20 @@ call gtk_hscale_new_with_range() or gtk_vscale_new_with_range().
 
 <!-- ##### STRUCT GtkScale ##### -->
 <para>
-The #GtkScale-struct struct contains the following fields.
-(These fields should be considered read-only. They should never be set by
-an application.)
-
-<informaltable pgwide="1" frame="none" role="struct">
-<tgroup cols="2"><colspec colwidth="2*"/><colspec colwidth="8*"/>
-<tbody>
-
-<row>
-<entry>#guint <structfield>draw_value</structfield>;</entry>
-<entry>non-zero if the scale's current value is displayed next to the
-slider.</entry>
-</row>
-
-<row>
-<entry>#guint <structfield>value_pos</structfield>;</entry>
-<entry>the position in which the textual value is displayed, selected from
-#GtkPositionType.</entry>
-</row>
-
-</tbody></tgroup></informaltable>
+The fields of the #GtkScale-struct struct should only be accessed via
+the accessor functions.
 </para>
 
 
 <!-- ##### SIGNAL GtkScale::format-value ##### -->
 <para>
-Signal which allows you to change how the scale value is displayed.  Connect a
-signal handler which returns an allocated string representing @value.
-That string will then be used to display the scale's value.
-Here's an example signal handler which displays a value 1.0 as
-with "--&gt;1.0&lt;--".
-<informalexample><programlisting>
-static gchar*
-format_value_callback (GtkScale *scale,
-                       gdouble   value)
-{
-  return g_strdup_printf ("--&gt;&percnt;0.*g&lt;--",
-                          gtk_scale_get_digits (scale), value);
-}
-</programlisting></informalexample>
+
 </para>
 
-@scale: the object which received the signal.
-@arg1: 
-@Returns: allocated string representing @value
-<!-- # Unused Parameters # -->
-@value: value to format
+@scale: 
+@value: 
+@Returns: 
+
 
 <!-- ##### ARG GtkScale:digits ##### -->
 <para>
@@ -104,61 +71,56 @@ format_value_callback (GtkScale *scale,
 
 <!-- ##### FUNCTION gtk_scale_set_digits ##### -->
 <para>
-Sets the number of decimal places that are displayed in the value.  Also causes
-the value of the adjustment to be rounded off to this number of digits, so the
-retrieved value matches the value the user saw.
+
 </para>
 
-@scale: a #GtkScale.
-@digits: the number of decimal places to display, e.g. use 1 to display 1.0,
-2 to display 1.00 etc.
+@scale: 
+@digits: 
 
 
 <!-- ##### FUNCTION gtk_scale_set_draw_value ##### -->
 <para>
-Specifies whether the current value is displayed as a string next to the
-slider.
+
 </para>
 
-@scale: a #GtkScale.
-@draw_value: a boolean.
+@scale: 
+@draw_value:
 
 
 <!-- ##### FUNCTION gtk_scale_set_value_pos ##### -->
 <para>
-Sets the position in which the current value is displayed.
+
 </para>
 
-@scale: a #GtkScale.
-@pos: the position in which the current value is displayed.
+@scale:
+@pos: 
 
 
 <!-- ##### FUNCTION gtk_scale_get_digits ##### -->
 <para>
-Gets the number of decimal places that are displayed in the value.
+
 </para>
 
-@scale: a #GtkScale.
-@Returns: the number of decimal places that are displayed.
+@scale:
+@Returns:
 
 
 <!-- ##### FUNCTION gtk_scale_get_draw_value ##### -->
 <para>
-Returns whether the current value is displayed as a string next to the
-slider.
+
 </para>
 
-@scale: a #GtkScale.
-@Returns: whether the current value is displayed as a string.
+@scale: 
+@Returns: 
 
 
 <!-- ##### FUNCTION gtk_scale_get_value_pos ##### -->
 <para>
-Gets the position in which the current value is displayed.
+
 </para>
 
-@scale: a #GtkScale.
-@Returns: the position in which the current value is displayed.
+@scale:
+@Returns:
 
 
 <!-- ##### FUNCTION gtk_scale_get_layout ##### -->
