@@ -1,3 +1,7 @@
+2008-12-28  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkscale.c: Merge docs inline.
+
 2008-12-28  Ryan Lortie  <desrt@desrt.ca>
 
 	small fix for "Paned Window Widgets" example
